[examples] lifesimulator ui fix (jscolor, topbar overlap)

--- a/examples/src/lifesimulator/style.css
+++ b/examples/src/lifesimulator/style.css
@@ -9,7 +9,7 @@ body {
 
 #code-area {
     position: absolute;
-    top: 10px;
+    top: 20px;
     width: 100%;
     padding-left: 10px;
     padding-right: 10px;
@@ -30,7 +30,7 @@ body {
     width: 100%;
     position: absolute;
     top: 10px;
-    z-index: 10;
+    //z-index: 10;
 }
 
 #container-options a{
